# embedded

rust-stm32/: Cargo.toml  README.md  openocd.cfg
rust-stm32/.cargo/: config.toml
rust-stm32/src/: main.rs
